--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -17,7 +17,7 @@
         }
 
         #thirdDiv {
-            
+
             height: 700px;
             width: 500px;
             background-color: chocolate;
@@ -37,7 +37,7 @@
 <body>
     
     <h1>
-        Joaquín
+        Joaquín Marino
     </h1>
     <h3>
         Henry
