--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -7,7 +7,7 @@
     <title>Tarea de HTML de Joaquín</title>
     <style>
         h1 {
-            color: salmon;
+            color: rgb(55, 72, 228);
         }
         
         img {
